# adaptive_jump_model

./: .gitignore  AGENTS.md  CLAUDE.md  LEARN_P0.html  LEARN_P1.html  MATH_REFERENCE.html  P0_PLOTS.html  README.md  STATUS.md  TASK.md  pyproject.toml  requirements.txt  research-holdout-2026.toml  research.toml
.agent/: handoff.sh  render_log.py  session-log.html  session-log.jsonl
archive/completed-tasks/: fixed-baselines-001.md  interactive-textbook-001.md  separation-turnover-001.md  visual-textbook-002.md
archive/legacy-minute/: README.md
archive/pre-audit-daily/: README.md
deploy/: adaptive-jump-monitor.service  cloudflared-config.yml.example  monitor.env.example
docs/: author-data-request.txt  developed-math.html  research-workflow-comparison.html
docs/learning/: 01-data-parity.html  01-money-assets-cash.html  02-data-pipeline.html  02-prices-dividends-returns.html  03-returns-features.html  03-risk-downside-losses.html  04-fixed-baselines.html  04-market-regimes-persistence.html  05-data-parity-proxy-replication.html  06-reproducibility-sealed-evidence.html  07-backtesting-without-future.html  08-returns-to-model-features.html  09-hidden-markov-models.html  10-clustering-statistical-jump-models.html  11-dynamic-programming-online-inference.html  12-walk-forward-selection-performance.html  13-guided-reading-shu-yu-mulvey.html  14-paper-legacy-verified-v7.html  browser-dependencies.json  (+4 more)
paper/: manuscript.tex
reports/: dashboard.html  demo_summary.md  research_design_notes.html
research/: SCIENTIFIC_LEDGER.md  STATUS.md  adaptive-confidence-001.toml  adaptive-separation-001.toml  balanced-lagged-mechanism-001.toml  balanced-lagged-performance-001.toml  dd-loss-scale-001.toml  endpoint-grid-audit.toml  experiment_registry.jsonl  holdout-2026-001.toml  hyperparameter-grid-attribution.toml  jm-train-window-sensitivity.toml  lagged-evidence-mechanism-001.toml  lagged-evidence-performance-001.toml  lagged-selection-attribution-001.toml  persistence-calibrated-search.toml  persistence-grid-evaluation.toml  separation-turnover-001.toml  simple-jm-suite-001.toml
scripts/: p1_adaptive_lambda.py  p2_asymmetric.py  prepare_processed_data.py  run_all_demos.py  run_library_backtest_audit.py  run_model_comparison_demo.py  run_synthetic_separation_demo.py
tests/: test_backtest.py  test_balanced_analysis.py  test_balanced_model.py  test_balanced_runner.py  test_balanced_verifier.py  test_calibration.py  test_cli.py  test_confidence_study.py  test_config.py  test_data.py  test_data_kibot.py  test_dp.py  test_endpoint_grid_artifact.py  test_endpoint_grid_audit.py  test_endpoint_grid_contract.py  test_endpoint_grid_decision_control.py  test_endpoint_grid_parallel.py  test_experiments.py  test_features.py  test_grid_evaluation.py  test_handoff.py  test_hmm.py  test_holdout_runner.py  test_inference.py  test_lagged_attribution.py  test_lagged_figures.py  test_lagged_mechanics.py  test_lagged_model.py  test_lagged_performance.py  test_lagged_runner.py  test_lagged_study.py  test_lagged_verifier.py  test_learning_docs.py  test_models.py  test_monitor_api.py  test_monitor_audit.py  test_monitor_browser.py  test_monitor_checkpoints.py  test_monitor_deploy.py  test_monitor_event_store.py  (+29 more)
(+172 files in other folders)
